20110120 make-perl.c,myglib/ghash.c: add the g_hash_table_foreach() function and
         update g_hash_table_new() function to support the
         g_hash_table_new( NULL, NULL ) syntax (patch #3160211) (Sergio
         Baldovi).
20110130 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for SpecDrum in SZX snapshots (patch #3164313) (Jon
         Mitchell).
20110131 sna.c,z80.c: note info loss of SpecDrum info when writing sna or z80
         format snapshots (Fred).
20110327 configure.in: allow the user to say they do not want to use windres
         (works around bug #3248008; thanks, Cygnus).
20110405 libspectrum.h.in: add missing WIN32_DLL (Stuart).
20110407 accessor.pl,snap_accessors.txt,snapshot.c,szx.c: add support for Beta
         128 interface autoboot setting in SZX snapshots (Fred).
20110422 tape_block.c: ROM block duration didn't take into account pilot and
         sync pulses (Fred).
20110422 tape.c: don't expect an edge for a jump, group start/end, loop
         start/end or other non-audio blocks (Fred).
20110427 Makefile.am,internals.h,tap.c,tape_block.c,tzx_read.c,utilities.c,
         warajevo_read.c: centralise ms/tstate conversions and tape block pause
         setting functions (Fred).
20110427 tzx_read.c,tzx_write.c,warajevo_read.c,wav.c: complete centralisation
         of tape block pause setting functions (Fred).
20110427 libspectrum.h.in,tape.c: add comments for
         LIBSPECTRUM_TAPE_FLAGS_LENGTH_SHORT and
         LIBSPECTRUM_TAPE_FLAGS_LENGTH_LONG (Fred).
20110427 tape.c,test/test15.c: use centralised methods for ms/tstate conversions
         (Fred).
20110427 tape.c,test/test15.c: use more centralised methods for ms/tstate
         conversions (Fred).
20110427 z80.c: initialise machine_type to avoid a warning (Fred).
20110427 test/test.c: test needed updating for ROM block duration fix (Fred).
20110427 tzx_read.c: message time in the TZX is in seconds not ms (Fred).